Moved winch control to separate widget

--- a/src/FlightMap/Widgets/CMakeLists.txt
+++ b/src/FlightMap/Widgets/CMakeLists.txt
@@ -3,6 +3,7 @@ add_custom_target(FligthMapWidgetsQml
 		CenterMapDropButton.qml
 		CenterMapDropPanel.qml
 		CompassRing.qml
+		WinchControl.qml
 		MapFitFunctions.qml
 		PhotoVideoControl.qml
 		QGCArtificialHorizon.qml
